syntax = "proto3";

package api.auth;

option go_package = "github.com/rusgainew/tunduck-app-mk/proto-lib/auth";

/**
 * User aggregate root
 * Contains complete user information
 */
message User {
  // Unique user identifier (UUID)
  string id = 1;
  // User email address (unique)
  string email = 2;
  // User first name
  string first_name = 3;
  // User last name
  string last_name = 4;
  // User creation timestamp (Unix milliseconds)
  int64 created_at = 5;
  // Last updated timestamp (Unix milliseconds)
  int64 updated_at = 6;
  // User status: "active", "inactive", "banned"
  string status = 7;
    // User role: "admin", "user", "organization_owner"
    string role = 8;
}

/**
 * Token value object
 * Contains JWT token information
 */
message Token {
  // JWT access token
  string access_token = 1;
  // Token expiration time (seconds)
  int64 expires_in = 2;
  // Token type (usually "Bearer")
  string token_type = 3;
  // Optional refresh token for token rotation
  string refresh_token = 4;
  // Refresh token expiration (seconds)
  int64 refresh_expires_in = 5;
}

/**
 * Credential value object
 * Used for login/register requests
 */
message Credential {
  // User email
  string email = 1;
  // User password (hashed in persistence layer)
  string password = 2;
}

/**
 * Role information
 * Associated with user for RBAC
 */
message Role {
  // Role identifier
  string id = 1;
  // Role name: "admin", "user", "organization_owner"
  string name = 2;
  // Role description
  string description = 3;
  // Permissions assigned to this role
  repeated Permission permissions = 4;
}

/**
 * Permission information
 * Granular access control
 */
message Permission {
  // Permission identifier
  string id = 1;
  // Permission code: "users.read", "organizations.write", etc
  string code = 2;
  // Permission description
  string description = 3;
}
