syntax = "proto3";

package api.auth;

option go_package = "github.com/rusgainew/tunduck/gen/proto/auth";

import "api/proto/auth.proto";
import "api/proto/common.proto";

/**
 * AuthService provides authentication and user management operations
 * Используется:
 * - auth-service: реализует этот сервис
 * - company-service: клиент для проверки токенов
 * - document-service: клиент для проверки токенов
 */
service AuthService {
  /**
   * Register a new user
   * Request: email, password, first_name, last_name
   * Response: user, token
   */
  rpc Register(RegisterRequest) returns (AuthResponse);

  /**
   * Login existing user
   * Request: email, password
   * Response: user, token
   */
  rpc Login(LoginRequest) returns (AuthResponse);

  /**
   * Validate access token and get user info
   * Request: access_token
   * Response: user
   * Used by other services to verify JWT tokens
   */
  rpc ValidateToken(ValidateTokenRequest) returns (User);

  /**
   * Get user by ID
   * Request: user_id
   * Response: user
   */
  rpc GetUser(GetUserRequest) returns (User);

  /**
   * Logout user (invalidate token)
   * Request: access_token
   * Response: empty
   */
  rpc Logout(LogoutRequest) returns (api.common.Empty);

  /**
   * Refresh access token
   * Request: refresh_token
   * Response: new_token
   */
  rpc RefreshToken(RefreshTokenRequest) returns (Token);
}

// ============================================
// Request/Response Messages
// ============================================

message RegisterRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  User user = 1;
  Token token = 2;
  int64 timestamp = 3;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message GetUserRequest {
  string user_id = 1;
}

message LogoutRequest {
  string access_token = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}
